# chatbot

./: Cargo.toml  LICENSE
src/: chatbot.rs  context.rs  main.rs  messages.rs  messages_gateway.rs  registration.rs  state_machine.rs  states.rs  telegram.rs  test.rs  whatsapp_messages.rs
src/chatbot/: chat_state.rs  context.rs
src/messages_gateway/: chat_state.rs  context.rs
src/registration/: config.rs  context.rs  mod.rs  registrations.rs
src/state_machine/: form_states.rs  mod.rs  state_machine_tests.rs  state_output.rs  transitions.rs
src/telegram/: context.rs
