[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1.57"
actix-rt = "2.7.0"
chrono = "0.4.22"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
mockall = "0.11.2"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]